--- a/src/components/MovieCardDetail/index.css
+++ b/src/components/MovieCardDetail/index.css
@@ -12,7 +12,7 @@
   max-width: 800px;
   padding: 20px;
   gap: 20px;
-  background-color: #f0f0f0;
+
   border-radius: 10px;
 }
 
